force-app/main/default/objects/Protocolo_Contacto_Cliente__c/Protocolo_Contacto_Cliente__c.object-meta.xml
<CustomObject>
    <description>NPS para las llamadas de primer contacto con el cliente para asegurar la comprensión y el conocimiento de las condiciones contractuales.</description>
    <label>Protocolo Contacto Cliente</label>
    <nameField>
        <displayFormat>PCC-{00000}</displayFormat>
        <label>Nombre de Protocolo Contacto Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocolo Contacto Cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>