force-app/main/default/objects/Protocolo_Contacto_Cliente__c/fields/Claridad_y_comprensi_n_del_contrato__c.field-meta.xml
<CustomField>
    <fullName>Claridad_y_comprensi_n_del_contrato__c</fullName>
    <label>Claridad y comprensión del contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>