force-app/main/default/objects/Protocolo_Contacto_Cliente__c/fields/Condicion_contractual_Descuento_de_gas__c.field-meta.xml
<CustomField>
    <fullName>Condicion_contractual_Descuento_de_gas__c</fullName>
    <label>Condicion contractual: Descuento de gas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>