force-app/main/default/objects/Protocolo_Contacto_Cliente__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Protocolo Contacto Cliente</relationshipLabel>
    <relationshipName>Protocolo_Contacto_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>