force-app/main/default/objects/Protocolo_Contacto_Cliente__c/fields/Valoracion_de_la_llamada__c.field-meta.xml
<CustomField>
    <fullName>Valoracion_de_la_llamada__c</fullName>
    <inlineHelpText>Donde 1 es no valora para nada esta llamada y 10 valora mucho la llamada</inlineHelpText>
    <label>Valoracion de la llamada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>